[B]Retrospect v5.5.xx - Changelog - xxxx-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: NPO video playback broken (Fixes #1679).
* Added: Tweede Kamer Debat Direct (Fixes #1394).
