@@ -11,4 +11,5 @@ _None_
 [B]Channel related[/B]
 * Fixed: NPO video playback broken (Fixes #1679).
 * Added: Tweede Kamer Debat Direct (Fixes #1394).
+* Added: List NPO Start Extra's and Fragmenten (Fixes #1649).
 
